force-app/main/default/objects/MD_Appraisal_Subject__c/MD_Appraisal_Subject__c.object-meta.xml
<CustomObject>
    <label>MD Appraisal Subject</label>
    <nameField>
        <label>MD Appraisal Subject Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MD Appraisal Subjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>