force-app/main/default/objects/MD_Appraisal_Subject__c/fields/MD_Appraisal_Form__c.field-meta.xml
<CustomField>
    <fullName>MD_Appraisal_Form__c</fullName>
    <label>MD Appraisal Form</label>
    <referenceTo>MD_Appraisal_Form__c</referenceTo>
    <relationshipLabel>MD Appraisal Subjects</relationshipLabel>
    <relationshipName>MD_Appraisal_Subjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>