force-app/main/default/objects/MD_Appraisal_Subject__c/fields/MD_Appraisal_Subject_External_ID__c.field-meta.xml
<CustomField>
    <fullName>MD_Appraisal_Subject_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>MD Appraisal Subject External ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>